# sudoku_solver_wasm

./: .gitignore  Cargo.toml  index.html  package-lock.json  tailwind.config.js
.github/workflows/: gh-pages-deploy.yml
src/: actions.rs  error.rs  generator.rs  hotkeys.rs  main.rs  state.rs  sudoku.rs  sudoku_data.rs  ui.rs  util.rs
style/: tailwind.css
