[package]
name = "sudoku_solver_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
derive_more = "0.99.18"
leptos = { version = "0.6.13", features = ["csr", "nightly"] }
leptos_hotkeys = "0.2.2"
leptos_meta = { version = "0.6.13", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.13", features = ["csr", "nightly"] }
rstest = "0.21.0"
rust-sudoku-solver = { git = "https://github.com/maxbergmark/rust-sudoku-solver.git", branch = "main" }
web-time = "1.1.0"
